Carousel: Fixed various focus outline issues.
* Made outlines appear around focused panel links.
* Made outlines appear around focused videos in Firefox. Might run into contrast issues against dark backgrounds.
* Carousel style 1 and 2: Fixed outline positioning issues with tab count list item in IE/Edge.
* Carousel style 1: Prevented the bottom of the tab count list item's outline from overflowing on top of panels at 200% text zoom in Firefox.
* Carousel style 2 with thumbnails: Increased visibility of outlines on focused thumbnail links.

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -258,6 +258,7 @@ $carousel-tablist-tabcount-color: #000 !default;
 $carousel-tabpanel-figcaption-color: #fff !default;
 $carousel-tabpanel-link-color: $carousel-tabpanel-figcaption-color !default;
 $carousel-tabpanel-figcaption-bg-color: $clrDarkBlue !default;
+$carousel-tabpanel-outline-offset: 2px !default;
 
 // Carousel Style 2 with Thumbnails
 $carousel-s2-tablist-controls-bg-color: $clrLight !default;
